# horizon-capital

./: .dockerignore  .env.example  .gitignore  Agentic_AI_Engineer_Home_Task__284_29.docx  Dockerfile  Makefile  README.md  architecture.dot  architecture_deployment.dot  architecture_simple.dot  demo_run.py  docker-compose.observability.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  smoke_test.py
.cursor/: mcp.json.example
app/: allocation.py  asset_universe.py  bootstrap_data.py  config.py  daily_cadence.py  daily_plan.py  db.py  dossier_paths.py  eval_dashboard.py  execution.py  firm_bootstrap.py  firm_orchestration.py  firm_state.py  firm_timeline.py  graph.py  hitl_brief.py  hitl_sync.py  llm.py  main.py  manager_scoring.py  market_calendar.py  market_data.py  market_providers.py  metrics_registry.py  model_routing.py  models.py  ops_alerts.py  ops_db.py  pipeline_view.py  plan_automation.py  portfolio.py  rag.py  rag_bootstrap.py  scheduler.py  seed.py  tools.py  traces.py  trade_history.py  trading_posture.py  wait_queue.py
data/: candidates.json
docs/: README.md  agent-contracts.md  architecture-diagrams.md  business-case.md  demo-script.md  eval-results.md  frameworks-deep-dive.md  guardrails.md  how-it-works-simple.md  mcp-market-data.md  persistence.md  system-flow-diagrams.html  technical-overview.md  walkthrough-one-trade.md
evals/: README.md  __init__.py  benchmark.py  guardrails.py  metrics.py  replay.py  run.py
observability/: README.md
scripts/: demo.sh
tests/: conftest.py  test_alerts_ui.py  test_app_factory.py  (+24 more)
(+128 files in other folders)
