[project]
name = "horizon-capital"
version = "1.0.0"
description = "AI Investment Firm — multi-agent paper-trading system (production refactor)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = ["E501"]  # line length handled by formatter
